# ai-governance-tool

./: .env.template  .gitignore  ARCHITECTURE_ANALYSIS.md  AUDIT_DASHBOARD.md  CODEBASE_EXPLORATION.md  CODE_SNIPPETS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PYPI_PUBLISHING.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  demo.py  demo.sh  publish.sh  pyproject.toml  requirements.txt  setup.py
ai_governance/: __init__.py  ai_client.py  audit_logger.py  batch_processor.py  cli.py  diff_manager.py  file_discoverer.py  language_config.py  policy_engine.py  scanner.py  web_ui.py
ai_governance/profiles/: default-secure.yaml
ai_governance/templates/: dashboard.html
demo/legacy_code/: email_handler.py  helper_functions.py  payment_processor.py  user_service.py  utils.py
profiles/: default-secure.yaml
