[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-governance"
version = "0.1.0"
authors = [
    {name = "AI Governance Tool"},
]
description = "Secure AI-assisted code refactoring with policy controls for 39+ programming languages"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ai", "refactoring", "security", "governance", "code-quality", "claude", "anthropic"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.18.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-governance-tool"
Documentation = "https://github.com/yourusername/ai-governance-tool#readme"
Issues = "https://github.com/yourusername/ai-governance-tool/issues"
Source = "https://github.com/yourusername/ai-governance-tool"

[project.scripts]
ai-governance = "ai_governance.cli:cli"

[tool.setuptools]
packages = ["ai_governance"]
include-package-data = true

[tool.setuptools.package-data]
ai_governance = [
    "profiles/*.yaml",
    "templates/*.html",
    "static/*"
]
